--- a/appointment2206082505/src/main/resources/applicaton.yml
+++ b/appointment2206082505/src/main/resources/applicaton.yml
@@ -1,16 +1,3 @@
 spring:
-  application:
-    name: appointment2206082505
-  datasource:
-    url: jdbc:postgresql://localhost:15001/appointment2206082505
-    username: postgres
-    password: secret99
-  jpa:
-    properties:
-      hibernate:
-        jdbc:
-          lob:
-            non_contextual_creation: true
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-    hibernate:
-      ddl-auto: update
+  profiles:
+    active: dev
