test: test find appointment by date range

--- a/appointment2206082505/src/main/resources/applicaton.yml
+++ b/appointment2206082505/src/main/resources/applicaton.yml
@@ -1,3 +1,12 @@
 spring:
   profiles:
-    active: dev
+    active: 'dev'
+  jpa:
+    properties:
+      hibernate:
+        jdbc:
+          lob:
+            non_contextual_creation: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update
