--- a/appointment2206082505/src/main/resources/application-prod.yml
+++ b/appointment2206082505/src/main/resources/application-prod.yml
@@ -4,6 +4,6 @@ spring:
   application:
     name: appointment2206082505
   datasource:
-    url: ${DATABASE_URL_DEV}
-    username: ${DEV_USERNAME}
-    password: ${DEV_PASSWORD}
+    url: ${DATABASE_URL_PROD}
+    username: ${PROD_USERNAME}
+    password: ${PROD_PASSWORD}
